--- a/index.html
+++ b/index.html
@@ -27,11 +27,16 @@
       img {
         width: 100%;
         height: 100%;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
       }
 
       a {
         text-decoration: none;
         color: #333;
+      }
+
+      a:hover {
+        text-decoration: underline;
       }
 
       .grid3x2 {
@@ -112,49 +117,67 @@
       <div class="grid3x2">
         <div class="box box1">
           <div>
-            <img
-              src="http://res.cloudinary.com/dkw0kkkgd/image/upload/v1510955122/Screen_Shot_2017-11-17_at_3.44.40_PM_wb7bur.png"
-              alt="Poll Vault"
-            />
+            <a href="https://www.pollvault.co/">
+              <img
+                src="http://res.cloudinary.com/dkw0kkkgd/image/upload/v1510955122/Screen_Shot_2017-11-17_at_3.44.40_PM_wb7bur.png"
+                alt="Poll Vault"
+              />
+            </a>
           </div>
         </div>
         <div class="box box2">
           <div>
-            <h2>Poll Vault</h2>
+            <h2>
+              <a href="https://www.pollvault.co/">
+                Poll Vault
+              </a>
+            </h2>
             <section>
-              Chartreuse air plant cliche VHS iceland, truffaut palo santo af flannel locavore. Slow-carb messenger bag chambray lyft taxidermy. Quinoa kinfolk ugh, freegan semiotics readymade jean shorts glossier. Lyft cloud bread keffiyeh retro messenger bag craft beer.
+              Poll Vault is a "content and comment" web app that is a hub for user-submitted polls. Anyone can vote on polls and authenticated users can add polls and comments. The visual design is influenced by Google Fonts, Twitter's polls, and Youtube's comment section. It is a React/Redux web app that consumes a Node/Express RESTful API with careful consideration given to accessibility and Progressive Web App features.
             </section>
           </div>
         </div>
         <div class="box box3">
           <div>
-            <h2>Car Pool</h2>
-            <section>
-              Chartreuse air plant cliche VHS iceland, truffaut palo santo af flannel locavore. Slow-carb messenger bag chambray lyft taxidermy. Quinoa kinfolk ugh, freegan semiotics readymade jean shorts glossier. Lyft cloud bread keffiyeh retro messenger bag craft beer.
-            </section>
+              <h2>
+                <a href="https://fleemaja.github.io/carPool">
+                  Car Pool
+                </a>
+              </h2>
+              <section>
+                Car Pool is a desktop (requires keyboard inputs) web game made with JavaScript. It uses p5.js for graphics and animation and uses matter.js to handle the 2d physics. The idea is based on Rocket League, a popular video game where cars play soccer against each other, but is based around the game of pool (aka billiards) instead.
+              </section>
           </div>
         </div>
         <div class="box box4">
           <div>
-            <img
-              src="http://res.cloudinary.com/dkw0kkkgd/image/upload/v1505249942/gamePlay_wowgyz.png"
-              alt="Car Pool"
-            />
+            <a href="https://fleemaja.github.io/carPool">
+              <img
+                src="http://res.cloudinary.com/dkw0kkkgd/image/upload/v1505249942/gamePlay_wowgyz.png"
+                alt="Car Pool"
+              />
+            </a>
           </div>
         </div>
         <div class="box box5">
           <div>
-            <img
-              src="http://res.cloudinary.com/dkw0kkkgd/image/upload/v1491504873/Screen_Shot_2017-04-06_at_1.53.49_PM_u45o5t.png"
-              alt="U.S. State Animals Map"
-            />
+            <a href="https://fleemaja.github.io/UsStateAnimalsMap">
+              <img
+                src="http://res.cloudinary.com/dkw0kkkgd/image/upload/v1491504873/Screen_Shot_2017-04-06_at_1.53.49_PM_u45o5t.png"
+                alt="U.S. State Animals Map"
+              />
+            </a>
           </div>
         </div>
         <div class="box box6">
           <div>
-            <h2>U.S. State Animals Map</h2>
+            <h2>
+              <a href="https://fleemaja.github.io/UsStateAnimalsMap">
+                U.S. State Animals Map
+              </a>
+            </h2>
             <section>
-              Chartreuse air plant cliche VHS iceland, truffaut palo santo af flannel locavore. Slow-carb messenger bag chambray lyft taxidermy. Quinoa kinfolk ugh, freegan semiotics readymade jean shorts glossier. Lyft cloud bread keffiyeh retro messenger bag craft beer.
+              U.S. State Animals Map is an interactive d3.js map displaying the United States' designated state animals. Hovering over a state reveals a tooltip with that state's designated state animal of a selected category.
             </section>
           </div>
         </div>
