less padding on mobile

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
 
       @media (max-width: 767px) {
 
+        .box { padding: 1em; }
+
         .grid3x2 > div {
           flex-basis: 100%;
         }
@@ -119,7 +121,7 @@
           <div>
             <a href="https://www.pollvault.co/">
               <img
-                src="http://res.cloudinary.com/dkw0kkkgd/image/upload/v1510955122/Screen_Shot_2017-11-17_at_3.44.40_PM_wb7bur.png"
+                src="https://res.cloudinary.com/dkw0kkkgd/image/upload/v1510955122/Screen_Shot_2017-11-17_at_3.44.40_PM_wb7bur.png"
                 alt="Poll Vault"
               />
             </a>
@@ -153,7 +155,7 @@
           <div>
             <a href="https://fleemaja.github.io/carPool">
               <img
-                src="http://res.cloudinary.com/dkw0kkkgd/image/upload/v1505249942/gamePlay_wowgyz.png"
+                src="https://res.cloudinary.com/dkw0kkkgd/image/upload/v1505249942/gamePlay_wowgyz.png"
                 alt="Car Pool"
               />
             </a>
@@ -163,7 +165,7 @@
           <div>
             <a href="https://fleemaja.github.io/UsStateAnimalsMap">
               <img
-                src="http://res.cloudinary.com/dkw0kkkgd/image/upload/v1491504873/Screen_Shot_2017-04-06_at_1.53.49_PM_u45o5t.png"
+                src="https://res.cloudinary.com/dkw0kkkgd/image/upload/v1491504873/Screen_Shot_2017-04-06_at_1.53.49_PM_u45o5t.png"
                 alt="U.S. State Animals Map"
               />
             </a>
