update poll vault link

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <div class="grid3x2">
         <div class="box box1">
           <div>
-            <a href="https://www.pollvault.co/">
+            <a href="https://www.poll-vault.co/">
               <img
                 src="https://res.cloudinary.com/dkw0kkkgd/image/upload/v1510955122/Screen_Shot_2017-11-17_at_3.44.40_PM_wb7bur.png"
                 alt="Poll Vault"
@@ -130,7 +130,7 @@
         <div class="box box2">
           <div>
             <h2>
-              <a href="https://www.pollvault.co/">
+              <a href="https://www.poll-vault.co/">
                 Poll Vault
               </a>
             </h2>
